This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

15-Apr-Mark Dexter
 + [#30298] Added note form field. Thanks Peter van Westen.

15-Apr-2013 Jean-Marie Simonet
 # [#30579] *TAGS: Tags field not displaying tags--Revert changes to the tags API. Thanks Elin

14-Apr-2013 Mark Dexter
 # [#30506] Joomla update system erases entire site if downloaded zip package is broken. Thanks Aliaksei Kanstantsinau.
 # [#30288] Module Prepare Paramater breaks Cache + Browser Cache + Application Rendering time. Thanks Parth Lawate.

14-Apr-2013 Michael Babker
 ^ [#30541] Small fixes to batch processing layouts.  Thanks Elin Waring
 # [#30396] Enabling finder plugins breaks tags saving
 # [#29240] Undefined property: JSite::$registeredurlparams.  Thanks Mark Stanton
 # [#30282] Joomla3.0.3 + PostgresQL -- User Registration Problem -- Database query failed -- column "sendemail" does not exist.  Thanks George Wilson
 + Database schema for SQL Server adding tags support
 # Fix incorrect lft/rgt values in #__menu table for new installs
 # Modify queries in tags code to support SQL Server
 # [#29685] extensions manager, discover fails with: "JLIB_DATABASE_QUERY_FAILED SQL=INSERT INTO "XXX_extensions"" (postgresql).  Thanks Viet Vu

13-Apr-2013 Mark Dexter
 # [#30560] Tagged Item menu options Child Tags always saves as Include. Thanks Elin.
 # [#30559] 'joomla_310.ddfre_updates' doesn't exist

-------------------- 3.1 Beta 4 Release [12-Apr-2012] ------------------

12-Apr-2013 Mark Dexter
 # [#30523] Fix Tag Batch Creation and Tag Library Cleanup. Thanks David and Elin.
 # [#30553] jos_contentitem_tag_map error.

12-Apr-2013 Jean-Marie Simonet